# nsf_soft_sensor_data_collection

./: CMakeLists.txt  NSF_Soft_Sensor.py  NSF_Soft_Sensor_Data_Collection  NSF_Soft_Sensor_Data_Collection.py  NSF_Soft_Sensor_GUI.py  README.md  app.cpp  bluetooth.py  install_wizard_template.ifp  test.py  test_app.py  test_app.spec
Singletact_GUI/: Singletact_GUI.py
arduino/: four_capacitive_sensor.ino  six_capacitive_sensor_bluetooth.ino  six_capacitive_sensor_bluetooth_QT_Py.ino  testBluetooth.ino
arduino/six_capacitive_sensor_bluetooth_QT_Py/: six_capacitive_sensor_bluetooth_QT_Py.ino
include/: applib.py  collection.py
lib/: test.py
